# client-sdk-rust

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README.template.md  build.rs  clippy.toml  install_protoc.sh  release-please-config.json  set_cargo_version.sh  update_cargo_toml.py
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yaml  lint_pr.yaml  on-pull-request.yml  on-push-to-main.yml  rust-clippy.yml
example/: Cargo.toml  README.ja.md  README.md  README.template.md
example/aws/cache-aside-dsql-lambda/: README.md
example/aws/cache-aside-dsql-lambda/infra/: cdk.json  package-lock.json  package.json
example/aws/cache-aside-dsql-lambda/infra/lib/: lambda-cache-aside-stack.ts
example/aws/cache-aside-dsql-lambda/infra/lib/constructs/: lambda-construct.ts
example/aws/cache-aside-dsql-lambda/rust/: Cargo.toml
example/aws/cache-aside-dsql-lambda/rust/get-lambda/: Cargo.toml
example/aws/cache-aside-dsql-lambda/rust/get-lambda/src/: main.rs
example/aws/cache-aside-dsql-lambda/rust/shared/: Cargo.toml
example/aws/cache-aside-dsql-lambda/rust/shared/src/models/: model.rs
example/aws/cdk-lambda/: README.md  README.template.md
example/aws/cdk-lambda/infrastructure/: package-lock.json  package.json  tsconfig.json
example/aws/cdk-lambda/infrastructure/lib/: MomentoSimpleLambdaStack.ts
example/aws/cdk-lambda/lambda/momento-simple-lambda/: Cargo.toml
example/aws/cdk-lambda/lambda/momento-simple-lambda/src/: main.rs
example/aws/token-vending-machine/: Cargo.toml  README.md
example/aws/token-vending-machine/infra/: cdk.json  package-lock.json  package.json
example/aws/token-vending-machine/infra/lib/: rust-token-vending-machine-stack.ts
example/aws/token-vending-machine/infra/lib/constructs/: function-construct.ts
example/aws/token-vending-machine/lambdas/: Cargo.toml
example/aws/token-vending-machine/lambdas/src/: main.rs  models.rs
example/aws/token-vending-machine/lambdas/test-events/: test-event-1.json
example/aws/zip-lambda/: README.md  README.template.md
example/aws/zip-lambda/momento-simple-lambda/: Cargo.toml
example/aws/zip-lambda/momento-simple-lambda/src/: main.rs
example/programs/topic-subscriber/: Cargo.toml  README.md
example/programs/topic-subscriber/src/: main.rs  models.rs
example/rust/: Cargo.toml  Makefile  README.ja.md  README.md  README.template.md
example/rust/src/docs_examples/: cheat_sheet_client_instantiation.rs  cheat_sheet_storage_client.rs  docs_examples.rs
example/src/: lib.rs  main.rs  readme.rs
example/src/docs_examples/: cheat_sheet_client_instantiation.rs  docs_examples.rs  mod.rs
examples/: Cargo.toml  README.ja.md  README.md
examples/src/: main.rs
scripts/: install_protoc.sh  install_protoc_linux.sh  install_protoc_osx.sh  test-setup.rs  test-teardown.rs
sdk/: .gitignore  CHANGELOG.md  Cargo.toml
sdk/scripts/: test-setup.rs  test-teardown.rs
sdk/src/: credential_provider.rs  errors.rs  lib.rs  utils.rs
sdk/src/cache/: cache_client.rs  cache_client_builder.rs  mod.rs
sdk/src/config/: grpc_configuration.rs  transport_strategy.rs
sdk/src/grpc/: header_interceptor.rs
sdk/src/storage/: mod.rs  preview_storage_client.rs  preview_storage_client_builder.rs
sdk/src/topics/: topic_client.rs
sdk/test-util/: Cargo.toml
sdk/test-util/src/: cache_test_state.rs  lib.rs  test_data.rs  test_utils.rs
sdk/tests/: mod.rs
sdk/tests/cache/: batch.rs  control.rs  dictionary.rs  list.rs  mod.rs  scalar.rs  sorted_set.rs
src/: auth.rs  cache.rs  cache_client.rs  cache_client_builder.rs  compression_utils.rs  credential_provider.rs  endpoint_resolver.rs  errors.rs  jwt.rs  lib.rs  momento.rs  sdk.rs  simple_cache_client.rs  utils.rs
src/auth/: auth_client.rs  auth_client_builder.rs  expiration.rs  mod.rs
src/cache/: cache_client.rs  cache_client_builder.rs  collection_ttl.rs  mod.rs
src/config/: configuration.rs  configurations.rs  grpc_configuration.rs  mod.rs  transport_strategy.rs
src/functions/: function.rs  function_client.rs  function_client_builder.rs  mod.rs
src/grpc/: auth_header_interceptor.rs  cache_header_interceptor.rs  header_interceptor.rs  mod.rs
src/leaderboard/: leaderboard_client.rs  leaderboard_client_builder.rs  leaderboard_resource.rs  mod.rs
src/momento/: auth.rs
src/preview/: topics.rs
src/protos/: cacheclient.proto  controlclient.proto
src/protosocket/: mod.rs
src/requests/: errors.rs  generate_api_key_request.rs  generate_api_token_request.rs  mod.rs
src/response/: cache_dictionary_fetch_response.rs  cache_dictionary_get_response.rs  cache_dictionary_increment_response.rs  cache_dictionary_set_response.rs  cache_get_response.rs  cache_set_fetch_response.rs  cache_set_response.rs  cache_sorted_set_fetch_response.rs  create_signing_key_response.rs  dictionary_pairs.rs  error.rs  flush_cache_response.rs  generate_api_key_response.rs  generate_api_token_response.rs  list_cache_response.rs  list_signing_keys_response.rs  mod.rs  momento_error.rs  old_response_types.rs
src/storage/: mod.rs  preview_storage_client.rs  preview_storage_client_builder.rs
src/topics/: mod.rs  topic_client.rs  topic_client_builder.rs  topic_subscription_manager.rs
test-util/: Cargo.toml
test-util/resources/: echo.wasm
test-util/src/: cache_test_state.rs  lib.rs  test_data.rs  test_utils.rs
tests/: cache_control.rs  cache_scalar.rs  cache_sorted_set.rs  cache_sorted_set_tests.rs  cache_test_state.rs  cache_ttl.rs  compress_utils.rs  integration_test.rs  mod.rs  old.rs  scalar.rs  tests.rs
tests/auth/: disposable_tokens.rs  mod.rs
tests/cache/: batch_v2.rs  control.rs  control_v2.rs  dictionary.rs  dictionary_v2.rs  item.rs  item_v2.rs  key_existence.rs  key_existence_v2.rs  list.rs  list_v2.rs  mod.rs  scalar.rs  scalar_v2.rs  set.rs  set_v2.rs  sorted_set.rs  sorted_set_tests.rs  sorted_set_v2.rs  ttl.rs  ttl_v2.rs
tests/leaderboard/: mod.rs
tests/old/: integration_test.rs
tests/storage/: control.rs  data.rs  mod.rs
tests/topics/: mod.rs  pubsub.rs  pubsub_v2.rs
(+349 files in other folders)
