[package]
name = "momento"
version = "0.52.2"
authors = ["momento"]
edition = "2018"
description = "Client SDK for Momento services"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/momentohq/client-sdk-rust"
homepage = "https://gomomento.com/"

[workspace]
members = [
    ".",
    "test-util"
]

# This is marked as an example so it can access dev-dependencies
[[example]]
name = "test-setup"
path = "scripts/test-setup.rs"
test = false
doc = false

# This is marked as an example so it can access dev-dependencies
[[example]]
name = "test-teardown"
path = "scripts/test-teardown.rs"
test = false
doc = false


[dependencies]
momento-protos = "0.127.1"

base64 = "0.22"
derive_more = { version = "2.0.1", features = ["full"] }
futures = "0"
h2 = { version = "0.4" }
hyper = { version = "1.6" }
log = "0.4"
protosocket = "0"
protosocket-prost = "0"
protosocket-rpc = "0"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.13", features = ["tls-ring", "tls-webpki-roots"] }
zstd = "0.13.3"

[dev-dependencies]
momento-test-util = { path = "test-util" }

anyhow = "1"
base64-url = "3"
env_logger = "0"
tokio-test = "0"
uuid = { version = "1", features = ["v4"] }

