[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
#momento = "0.15.0"
momento = { path = "../" }
tokio = { version = "1.18.2", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4"] }
futures = "0.3.30"
