[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[[bin]]
name = "cheat_sheet_client_instantiation"
path = "src/docs_examples/cheat_sheet_client_instantiation.rs"

[[bin]]
name = "docs_examples"
path = "src/docs_examples/docs_examples.rs"

[dependencies]
futures = "0.3.30"
momento = { version = "0.39.0", path = "../../sdk" }
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
anyhow = "1"
aws-sdk-dynamodb = "1.35.0"
aws-config = "1.5.3"
