[package]
name = "topic-subscriber"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
momento = "0.41.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
  "json",
] }
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
chrono = { version = "0.4.38", features = ["serde"] }

[profile.release]
opt-level = 3
