[package]
name = "get-lambda"
version = "0.1.0"
edition = "2021"
authors = ["Benjamen Pyle"]

[dependencies]
shared = { path = "../shared" }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls" , "postgres", "chrono", "uuid"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dsql = "1.0.0"

tokio = { version = "1", features = ["macros"] }
thiserror = "1.0.56"
config = "0.14.0"
lambda_http = "0.10.0"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
openssl = { version = "0.10.35", features = ["vendored"] }
momento = "0.44.0"

tracing-opentelemetry = "0.24.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"

